# discrub

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  format.sh
include/: credentials.h  discord_client.h  discrub_client.h  jsontok.h  log.h  logging.h  openssl_client.h  openssl_helpers.h  setup.h  sleep.h
src/: credentials.c  discord_client.c  discrub_client.c  jsontok.c  logging.c  main.c  openssl_client.c  openssl_helpers.c  setup.c  sleep.c
